--- a/Tutorial01.ipynb
+++ b/Tutorial01.ipynb
@@ -1384,7 +1384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extend the Model with Covariates (Temperture variables)"
+    "## Extend the Model with Covariates (Temperature variables)"
    ]
   },
   {
