add backtest image to notebook

--- a/Tutorial01.ipynb
+++ b/Tutorial01.ipynb
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "StatsForecast(models=[AutoARIMA])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,16 +800,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x294a8ebd0>"
+       "<matplotlib.legend.Legend at 0x328b1e810>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -835,7 +835,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example 2: Energy Price Forecasting"
+    "# Example 2: Energy Price Forecasting (with covariates)"
    ]
   },
   {
@@ -881,7 +881,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Backtesting (Cross-Validation)"
+    "### Backtesting (Cross-Validation)\n",
+    "\n",
+    "![backtest](https://raw.githubusercontent.com/jjmossel/time-series-tutorial/master/backtest.png)"
    ]
   },
   {
@@ -961,13 +963,6 @@
     "plt.plot(epf_bt1['ds'],epf_bt1['NHITS'],label='NHITS')\n",
     "plt.legend()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1109,20 +1104,6 @@
    "source": [
     "mape(epf_bt1 ,['NHITS']), mape(epf_bt2,['NHITS'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
