some more typos

--- a/Tutorial01.ipynb
+++ b/Tutorial01.ipynb
@@ -760,11 +760,13 @@
    "metadata": {},
    "source": [
     "# Probabilistic Forecasting \n",
-    "We can quantify the uncertainty of our perdictions using *predicitions interval*\n",
+    "We can quantify the uncertainty of our perdictions using *predicitions intervals*\n",
     "\n",
     "Predicition intervals can be constructed using either via\n",
-    "* Distubtion (eg Norma)\n",
-    "* Non-parametric (eg quantile regression)"
+    "* Distubtion (eg Normal)\n",
+    "* Non-parametric (eg quantile regression)\n",
+    "\n",
+    "Intervals can be calibrated using **Conformal Predictions**"
    ]
   },
   {
@@ -841,7 +843,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example 2: Energy Price Forecasting (with covariates)"
+    "# Example 2: Energy Demand Forecasting (with covariates)"
    ]
   },
   {
@@ -1025,7 +1027,7 @@
    "source": [
     "epf_models_2 = [NHITS(h = horizon,\n",
     "                input_size = 7*horizon,\n",
-    "                futr_exog_list = ['temperature_min' ,'temperature_max','is_weekday'], # <- Future exogenous variables\n",
+    "                futr_exog_list = ['temperature_min' ,'temperature_max','is_weekday'], \n",
     "                max_steps = 500,\n",
     "                early_stop_patience_steps=2,\n",
     "                val_check_steps = 100,\n",
